[package]
name = "PdfBuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
headless_chrome = "1.0.7"
pulldown-cmark = "0.13.0"
regex = "1.10.4"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.2.0"

axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
colored = "2.1.0"
indicatif = "0.17.8"
thiserror = "1.0.61"
notify = "6.1.1"

